--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Mavic company</title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="./style.css" />
     <link
       rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
@@ -52,7 +52,7 @@
       </div>
 
       <div class="producto" id="producto">
-        <img src="/drone.png" alt="drone image" />
+        <img src="./drone.png" alt="drone image" />
       </div>
 
       <div class="media">
@@ -65,6 +65,6 @@
       </div>
     </div>
 
-    <script src="app.js"></script>
+    <script src="./app.js"></script>
   </body>
 </html>
