--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
       </div>
 
       <div class="producto" id="producto">
-        <img src="./drone.png" alt="drone image" />
+        <img src="https://github.com/jguaura/droneLanding/blob/master/drone.png?raw=true" alt="drone image" />
       </div>
 
       <div class="media">
